# linkme

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
auth_service/: Dockerfile  pyproject.toml
auth_service/src/: main.py
auth_service/src/config/: __init__.py  settings.py
docs/: README.md
docs/architecture/: Analytics-Service.md  Auth-Service.md  CI-CD.md  Dashboard.md  How-to-setup-a-new-microservice.md  Infrastructure.md  Monitoring-and-Analytics.md  Overall-Architecture.md  Profile-Service.md  Testing.md
docs/setup/: Local-Development.md
profile_service/: Dockerfile  README.md  pyproject.toml  samconfig.toml  template.yaml
profile_service/lambda_handlers/: __init__.py  create_profile.py  delete_profile.py  get_profile.py  requirements.txt  update_profile.py
profile_service/lambda_handlers/utils/: db.py  logger.py
profile_service/src/: main.py
profile_service/src/config/: __init__.py  settings.py
profile_service/tests/unit/: test_handler.py
shared/: pyproject.toml
shared/common_python/contrib/fastapi/: app.py
tests/: test_results.xml
web_client/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
web_client/src/: App.tsx  index.css
web_client/src/components/: FormAction.tsx  FormExtra.tsx  Header.jsx  Header.tsx  Input.tsx  Login.jsx  Login.tsx  Logo.tsx  Signup.tsx  SocialButton.tsx  SocialButtonList.tsx
web_client/src/constants/: formFields.jsx  testData.tsx
web_client/src/pages/: Login.jsx  LoginPage.jsx  LoginPage.tsx  (+3 more)
(+99 files in other folders)
