[tool.poetry]
name = "linkme"
version = "0.1.0"
description = ""
authors = ["Vitalii Hrebennikov <webasman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
requests = "^2.31.0"
SQLAlchemy = "^2.0.21"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
loguru = "^0.7.2"
pytest = "^7.4.2"
# TODO linkme/shared for shared does not seem to be a Python package
#shared = { path = "./shared/" }


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
