[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Vitalii Hrebennikov <webasman@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
shared = { path = "../shared" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
